--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,8 @@
   <body>
     <div class="container">
         <h1>Faça seu login</h1>
-        <form method="POST" action="/auth">
+        <form method="POST" action="{{ url_for('auth') }}">
+            <input type="hidden" name="proxima" value="{{ proxima }}" >
             <p><label>Nome de usuário:</label> <input class="form-control" type="text" name="usuario" required></p>
             <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
             <p><button class="btn btn-primary" type="submit">Entrar</button></p>
