criando/alterando capas do jogo

--- a/templates/lista.html
+++ b/templates/lista.html
@@ -16,6 +16,7 @@
               <td>{{ jogo.categoria }}</td>
               <td>{{ jogo.console }}</td>
               <td><a  href="{{ url_for('edit',id=jogo.id) }}">Editar</a></td>
+              <td><a  href="{{ url_for('delete',id=jogo.id) }}">Deletar</a></td>
            </tr>
            {% endfor %}
         </tbody>
