--- a/templates/edit.html
+++ b/templates/edit.html
@@ -26,6 +26,7 @@
             <input type="text" id="console" name="console" class="form-control" value="{{ jogo.console }}">
           </div>
           <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+          <a class="btn btn-primary" href="{{ url_for('home') }}"> Voltar</a>
         </fieldset>
       </form>
 {% endblock %}
