--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
             <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
             <p><button class="btn btn-primary" type="submit">Entrar</button></p>
         </form>
+        <a class="btn btn-primary" href="{{ url_for('home') }}"> Voltar</a>
     </div>
 </body>
 </html>
