--- a/templates/novo.html
+++ b/templates/novo.html
@@ -25,6 +25,7 @@
             <input type="text" id="console" name="console" class="form-control">
           </div>
           <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+          <a class="btn btn-primary" href="{{ url_for('home') }}"> Voltar</a>
         </fieldset>
       </form>
 
